<resources>
    <string name="app_name">CookingApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Home">Home</string>
    <string name="ShoppingList">Lista della spesa</string>
    <string name="Recipe">Le mie ricette</string>
    <string name="Conversions">Conversioni</string>
    <string name="cookingapp">CookingApp</string>
    <string name="esplora_le_ricette">Esplora le ricette</string>
    <string name="register">Registrazione</string>
    <string name="signIn">Accedi</string>
    <string name="email">Indirizzo email</string>
    <string name="password">password</string>
    <string name="already_registered">Sei già registrato?</string>
    <string name="no_account">Non hai un account?</string>
    <string name="user_register">Registrati</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prova">prova</string>
    <string name="prova_gmail_com">prova@gmail.com</string>
    <string name="log_out">Esci</string>

    <string name="seleziona_tipologia">Seleziona Tipologia</string>
    <string name="seleziona_tipo_portata">Seleziona Tipo Portata</string>
    <string name="seleziona_tempo">Seleziona Tempo</string>
    <string name="seleziona_difficolta">Seleziona Difficoltà</string>

    <!-- Array per Spinner Tipologia -->
    <string-array name="tipologie">
        <item>Seleziona Tipologia</item>
        <item>Italiana</item>
        <item>Cinese</item>
        <item>Giapponese</item>
        <item>Messicana</item>
    </string-array>

    <!-- Array per Spinner Tipo Portata -->
    <string-array name="tipi_portata">
        <item>Seleziona Tipo Portata</item>
        <item>Antipasto</item>
        <item>Primo</item>
        <item>Secondo</item>
        <item>Dolce</item>
    </string-array>

    <!-- Array per Spinner Tempo -->
    <string-array name="tempi">
        <item>Seleziona Tempo</item>
        <item>15 minuti</item>
        <item>30 minuti</item>
        <item>45 minuti</item>
        <item>1 ora</item>
    </string-array>

    <!-- Array per Spinner Difficoltà -->
    <string-array name="difficolta">
        <item>Seleziona Difficoltà</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>