<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/ShoppingList" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_receipt_24"
            android:title="@string/Recipe" />
        <item
            android:id="@+id/nav_conversion"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/Conversions" />
    </group>
</menu>