<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.insubria.cookingapp.ui.home.HomeFragment"
        android:label="@string/Recipe"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.insubria.cookingapp.ui.shoppingList.SLFragment"
        android:label="@string/ShoppingList"
        tools:layout="@layout/fragment_shoppinglist" />

    <fragment
        android:id="@+id/nav_conversion"
        android:name="com.insubria.cookingapp.ui.conversions.ListFragment"
        android:label="@string/Conversions"
        tools:layout="@layout/fragment_list" />
</navigation>